Z-index fix for navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ select {
     color: white;
     width: 100%;
     position: fixed;
+    z-index: 99;
 }
 
 .navbar-logo {
